--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
-<body class="w-11/12 mx-auto text-center bg-green-50">
+<body class="w-11/12 mx-auto text-center">
     <header class="mt-12">
-        <h1 class="text-3xl font-bold mb-10 text-gray-600">
+        <h1 class="text-2xl md:text-3xl font-bold mb-10 text-gray-600">
             Welcome To Simple Bank
         </h1>
     </header>
     <main>
         <!-- Login Section -->
-        <section class=" mx-auto bg-green-400 p-10 rounded-2xl content-center sm:w-11/12 md:w-4/5 lg:w-3/4 xl:w-1/2 2xl:w-1/2 mb-20">
-            <div class="">
-                <h3 class="text-3xl text-white mb-10">
+        <section class=" mx-auto bg-green-400 p-10 rounded-2xl content-center w-11/12 md:w-4/5 lg:w-3/4 xl:w-1/2 2xl:w-1/2 mb-20">
+            <div class="w-full">
+                <h3 class="text-2xl text-white mb-10">
                     Please Login
                 </h3>
-                <input id="user-email" class="px-5 py-3 outline-none block m-5 sm:w-4/5 md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="email" name="" placeholder="type your email">
-                <input id="user-password" class="px-5 py-3 outline-none block m-5 sm:w-4/5 md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="password" name="" placeholder="type your password">
+                <input id="user-email" class="px-5 py-3 outline-none block m-5 w-full md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="email" name="" placeholder="type your email">
+                <input id="user-password" class="px-5 py-3 outline-none block m-5 w-full md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="password" name="" placeholder="type your password">
                 <p class="text-white">
-                    Email: demo@demo.com <br>
+                    Email: demo@bank.com <br>
                     Password: 12345
                 </p>
                 <button id="login-btn" class="mt-7 bg-gray-700 rounded px-10 py-3 text-white" type="submit">Login</button>
