--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input id="user-email" class="px-5 py-3 outline-none block m-5 w-full md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="email" name="" placeholder="type your email">
                 <input id="user-password" class="px-5 py-3 outline-none block m-5 w-full md:w-4/5 lg:w-3/4 xl:w-3/4 2xl:w-1/2 rounded-3xl mx-auto" type="password" name="" placeholder="type your password">
                 <p class="text-white">
-                    Email: demo@bank.com <br>
+                    Email: demo@demo.com <br>
                     Password: 12345
                 </p>
                 <button id="login-btn" class="mt-7 bg-gray-700 rounded px-10 py-3 text-white" type="submit">Login</button>
