--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </main>
     
-    <!-- JS -->
+    <!-- JS EDITED-->
     <script src="js/login.js"></script>
 </body>
 </html>
